Removing account address.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li>Turn off your internet connection (optional)</li>
                     <li>Extract zip and run index.html in your browser's anonymous window (optional)</li>
                     <li>Consider using safe OS like Ubuntu booted from CD (optional)</li>
-                    <li>Copy account address and seed from your RaiWallet and paste it in form bellow, currently it doesn't do much validations so be careful you got everything right</li>
+                    <li>Copy your seed from your RaiWallet and paste it in form bellow, currently it doesn't do much validations so be careful you got everything right</li>
                     <li>Click generate and if you are happy with the result click Print, sometimes images or text doesn't load correctly on first try</li>
                 </ol>
 
@@ -27,11 +27,6 @@
             <div class="row">
                 <div class="col">
                     <form id="generator">
-                        <div class="form-group">
-                            <label for="account">Account:</label>
-                            <input type="text" id="account" name="account" maxlength="64" class="form-control" />
-                            <div id="account-error" class="form-control-feedback" style="display: none;">This doesn't look like a RaiBlocks account.</div>
-                        </div>
                         <div class="form-group">
                             <label for="seed">Seed:</label>
                             <input type="text" id="seed" name="seed" maxlength="64" class="form-control" />
@@ -70,17 +65,16 @@
                 $('#generator').on('submit', function (e) {
                     e.preventDefault();
 
-                    var account = $('#account').val();
                     var seed = $('#seed').val();
                     var theme = $('#theme').val();
 
-                    if (validateInput(account, seed)) {
-                        generate(account, seed, theme);
+                    if (validateInput(seed)) {
+                        generate(seed, theme);
                     }
                 });
             });
 
-            themes = {
+            var themes = {
                 'hexagons': {
                     'background': 'img/hexagons.png',
                     'ribbonTop': [0, '#2C839A', 1.0, '#6CCEF5'],
@@ -97,7 +91,7 @@
                 }
             };
 
-            function generate(account, seed, theme) {
+            function generate(seed, theme) {
                 var wallet = document.getElementById('wallet');
                 wallet.width = 1200;
                 wallet.height = 400;
@@ -115,7 +109,6 @@
                         walletContext.globalAlpha = 0.25;
                         walletContext.drawImage(background, 0, 0, background.width, background.height, 0, 0, background.width, background.height);
                         walletContext.globalAlpha = 1.0;
-                        writeText(walletContext, 'RAIBLOCKS', '60px Montserrat', 'rgb(44, 62, 80)', 'center', wallet.width / 2, wallet.height / 2 + 150)
 
                         var qrSize = 200;
                         var topOffset = (wallet.height - qrSize) / 2;
@@ -124,13 +117,11 @@
                         var rightOffset = wallet.width - leftOffset;
                         var offset = 25;
 
-                        var accountImage = generateQR(account, qrSize);
-                        accountImage.onload = function () {
-                            writeText(walletContext, 'RECEIVING ADDRESS', '24px Montserrat', 'rgb(44, 62, 80)', 'center', leftOffset, topOffset - offset);
-                            walletContext.drawImage(accountImage, 0, 0, qrSize, qrSize, (wallet.height - qrSize) / 2, (wallet.height - qrSize) / 2, qrSize, qrSize);
-                            writeText(walletContext, account.substr(0, 32), '14px Roboto Mono', 'rgb(0, 0, 0)', 'center', leftOffset, bottomOffset + offset);
-                            writeText(walletContext, account.substr(32, 32), '14px Roboto Mono', 'rgb(0, 0, 0)', 'center', leftOffset, bottomOffset + offset * 1.75);
+                        logo.onload = function() {
+                            walletContext.drawImage(logo, 0, 0, logo.width, logo.height, (wallet.height - logo.height) / 2, (wallet.height - logo.height) / 2, logo.width, logo.height);
                         };
+
+                        writeText(walletContext, 'RAIBLOCKS', '60px Montserrat', 'rgb(44, 62, 80)', 'center', wallet.width / 2, wallet.height / 2)
 
                         var seedImage = generateQR(seed, qrSize);
                         seedImage.onload = function () {
@@ -138,10 +129,6 @@
                             walletContext.drawImage(seedImage, 0, 0, qrSize, qrSize, wallet.width - qrSize - (wallet.height - qrSize) / 2, (wallet.height - qrSize) / 2, qrSize, qrSize);
                             writeText(walletContext, seed.substr(0, 32), '14px Roboto Mono', 'rgb(0, 0, 0)', 'center', rightOffset, bottomOffset + offset);
                             writeText(walletContext, seed.substr(32, 32), '14px Roboto Mono', 'rgb(0, 0, 0)', 'center', rightOffset, bottomOffset + offset * 1.75);
-                        };
-
-                        logo.onload = function() {
-                            walletContext.drawImage(logo, 0, 0, logo.width, logo.height, (wallet.width - logo.width) / 2, (wallet.height - logo.height) / 2 - 40, logo.width, logo.height);
                         };
 
                         drawRibbon(walletContext, 0, 0, wallet.width, 0, themes[theme].ribbonTop);
@@ -173,6 +160,7 @@
             function writeText(ctx, text, font, color, textAlign, x, y) {
                 ctx.font = font;
                 ctx.textAlign = textAlign;
+                ctx.textBaseline = 'middle';
                 ctx.fillStyle = color;
                 ctx.fillText(text, x, y);
             }
@@ -194,18 +182,8 @@
                 ctx.stroke();
             }
 
-            function validateInput(account, seed) {
-                var resultAccount = true;
+            function validateInput(seed) {
                 var resultSeed = true;
-
-                if (account.length !== 64 || account.indexOf('xrb_') !== 0) {
-                    $('#account').parent().addClass('has-danger');
-                    $('#account-error').show();
-                    resultAccount = false;
-                } else {
-                    $('#account').parent().removeClass('has-danger');
-                    $('#account-error').hide();
-                }
 
                 if (seed.length !== 64 /*|| seed.match(/[0-9A-F]{64}/g*)*/) {
                     $('#seed').parent().addClass('has-danger');
@@ -216,7 +194,7 @@
                     $('#seed-error').hide();
                 }
 
-                if (resultAccount && resultSeed) {
+                if (resultSeed) {
                     return true;
                 } else {
                     return false;
