--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                             <li>Turn off your internet connection (optional)</li>
                             <li>Extract zip and run index.html in your browser's anonymous window (optional)</li>
                             <li>Consider using safe OS like Ubuntu booted from CD (optional)</li>
-                            <li>Copy your seed from your RaiWallet and paste it in form bellow, currently it doesn't do much validations so be careful you got everything right</li>
-                            <li>Click generate and if you are happy with the result click Print, sometimes images or text doesn't load correctly on first try</li>
+                            <li>Copy your seed from your RaiWallet and paste it in form below, currently it doesn't do much validations so be careful you got everything right</li>
+                            <li>Click Generate and if you are happy with the result click Print, sometimes images or text doesn't load correctly on first try</li>
                         </ol>
                         <a href="https://github.com/Blootoon/rai-paper" class="btn btn-primary btn-large" >Go to GitHub</a>
                     </div>
